# playground

./: .gitignore  README.md  pyproject.toml
agents_course/: Agents_experiments.ipynb  Automated_SDR.ipynb  Automated_SDR_guardrails.ipynb  automated_sdr.py
agents_course/1 - foundations/: Agentic_Loop_Response_API.ipynb
image_generator/: Designing-Gradio.ipynb  Dockerfile  README.md  docker-compose.yml  gradio_app.py
interview_coach/: Interview_Coach_Design.ipynb  README.MD  app.py  coach_manager.py  evaluator_agent.py  interview_coach.css  llms.py  models.json  search_agent.py  search_manager_agent.py  settings.json  state.py  sysprompt.txt  ui_event_handlers.py  ui_formatter.py  utils.py
interview_coach/myagents/: coach_agent.py  coach_manager.py  search_manager_agent.py
interview_coach/notebooks/: Completions_Interview_Coach_Design.ipynb
vkvideo_scrapper/: .dockerignore  .gitignore  Dockerfile  Scrap_VK_Videos.ipynb  app.py  datahandler.py  dataprovider.py  environment.yml  logger.py  memory.json  shows.json  tokenprovider.py
